forte_add_module(EPOS OFF "I/O support for EPOS2 motor controllers")

if (FORTE_MODULE_EPOS)
  find_package(epos)
  forte_add_sourcefile_hcpp(EPOSCommon)
  forte_add_sourcefile_hcpp(EPOSGetDI)
  forte_add_sourcefile_hcpp(EPOSGetPosition)
  forte_add_sourcefile_hcpp(EPOSGetSpeed)
  forte_add_sourcefile_hcpp(EPOSGetCurrent)
  forte_add_sourcefile_hcpp(EPOSGetStatus)
  forte_add_sourcefile_hcpp(EPOSMove)
  forte_add_sourcefile_hcpp(EPOSStop)
  forte_add_sourcefile_hcpp(EPOSWait)
  forte_add_sourcefile_hcpp(EPOSClearFault)
  forte_add_sourcefile_hcpp(EPOSSetPosZero)
  forte_add_link_library(epos::epos-epos)
  forte_add_link_library(can::can-usb)
  forte_add_link_library(tulibs::tulibs-usb)

  add_executable(EPOS-test test.cpp)
  target_link_libraries(EPOS-test epos::epos-epos tulibs::tulibs-usb can::can-usb)
endif()
